# Secure_Logs_178B

./: CMakeLists.txt  LICENSE  README.md
include/: config.h  error_codes.h  types.h
src/: main.cpp
src/modules/access_control/: access_control.cpp  access_control.h
src/modules/communication/: comms.cpp  comms.h
src/modules/logging/: logger.cpp  logger.h
src/utils/: crypto_utils.cpp  crypto_utils.h
tests/: test_main.cpp
tests/integration/: test_logging_comms.cpp
tests/unit/: test_access_control.cpp  test_comms.cpp  test_logger.cpp
